backend/ANTLR/processLevelMonitoring/monitoringNeedsParser.py
# Generated from monitoringNeeds.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class monitoringNeedsParser ( Parser ):

    grammarFileName = "monitoringNeeds.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'status'", "';'", "'value'", "'multipleMatch'", 
                     "'('", "')'", "'frequency'", "'interval'", "'rateOfChange'", 
                     "'pollRate'", "<INVALID>", "'|'", "'&'", "<INVALID>", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", 
                     "'*'", "'/'", "<INVALID>", "'on'", "'off'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "OPERATOR", 
                      "OR", "AND", "EQ", "NEQ", "G", "L", "GEQ", "LEQ", 
                      "ADD", "SUB", "MUL", "DIV", "BOOL", "TRUE", "FALSE", 
                      "INT", "ID", "DOUBLE", "WS", "COMMENT", "IP", "PV" ]

    RULE_masterRule = 0
    RULE_status = 1
    RULE_value = 2
    RULE_multiple = 3
    RULE_element = 4
    RULE_rn = 5
    RULE_st = 6
    RULE_frequency = 7
    RULE_interval = 8
    RULE_rateOfChange = 9
    RULE_pollRate = 10

    ruleNames =  [ "masterRule", "status", "value", "multiple", "element", 
                   "rn", "st", "frequency", "interval", "rateOfChange", 
                   "pollRate" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    OPERATOR=11
    OR=12
    AND=13
    EQ=14
    NEQ=15
    G=16
    L=17
    GEQ=18
    LEQ=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    BOOL=24
    TRUE=25
    FALSE=26
    INT=27
    ID=28
    DOUBLE=29
    WS=30
    COMMENT=31
    IP=32
    PV=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MasterRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def status(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monitoringNeedsParser.StatusContext)
            else:
                return self.getTypedRuleContext(monitoringNeedsParser.StatusContext,i)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monitoringNeedsParser.ValueContext)
            else:
                return self.getTypedRuleContext(monitoringNeedsParser.ValueContext,i)


        def multiple(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monitoringNeedsParser.MultipleContext)
            else:
                return self.getTypedRuleContext(monitoringNeedsParser.MultipleContext,i)


        def frequency(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monitoringNeedsParser.FrequencyContext)
            else:
                return self.getTypedRuleContext(monitoringNeedsParser.FrequencyContext,i)


        def interval(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monitoringNeedsParser.IntervalContext)
            else:
                return self.getTypedRuleContext(monitoringNeedsParser.IntervalContext,i)


        def rateOfChange(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monitoringNeedsParser.RateOfChangeContext)
            else:
                return self.getTypedRuleContext(monitoringNeedsParser.RateOfChangeContext,i)


        def pollRate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monitoringNeedsParser.PollRateContext)
            else:
                return self.getTypedRuleContext(monitoringNeedsParser.PollRateContext,i)


        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_masterRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMasterRule" ):
                listener.enterMasterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMasterRule" ):
                listener.exitMasterRule(self)




    def masterRule(self):

        localctx = monitoringNeedsParser.MasterRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_masterRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 22
                self.status()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 28
                self.value()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 34
                self.multiple()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 40
                self.frequency()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 46
                self.interval()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 52
                self.rateOfChange()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 58
                self.pollRate()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatusContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PV(self):
            return self.getToken(monitoringNeedsParser.PV, 0)

        def OPERATOR(self):
            return self.getToken(monitoringNeedsParser.OPERATOR, 0)

        def BOOL(self):
            return self.getToken(monitoringNeedsParser.BOOL, 0)

        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_status

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatus" ):
                listener.enterStatus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatus" ):
                listener.exitStatus(self)




    def status(self):

        localctx = monitoringNeedsParser.StatusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_status)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(monitoringNeedsParser.T__0)
            self.state = 65
            self.match(monitoringNeedsParser.PV)
            self.state = 66
            self.match(monitoringNeedsParser.OPERATOR)
            self.state = 67
            self.match(monitoringNeedsParser.BOOL)
            self.state = 68
            self.match(monitoringNeedsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PV(self):
            return self.getToken(monitoringNeedsParser.PV, 0)

        def OPERATOR(self):
            return self.getToken(monitoringNeedsParser.OPERATOR, 0)

        def DOUBLE(self):
            return self.getToken(monitoringNeedsParser.DOUBLE, 0)

        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = monitoringNeedsParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(monitoringNeedsParser.T__2)
            self.state = 71
            self.match(monitoringNeedsParser.PV)
            self.state = 72
            self.match(monitoringNeedsParser.OPERATOR)
            self.state = 73
            self.match(monitoringNeedsParser.DOUBLE)
            self.state = 74
            self.match(monitoringNeedsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultipleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(monitoringNeedsParser.ElementContext)
            else:
                return self.getTypedRuleContext(monitoringNeedsParser.ElementContext,i)


        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_multiple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiple" ):
                listener.enterMultiple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiple" ):
                listener.exitMultiple(self)




    def multiple(self):

        localctx = monitoringNeedsParser.MultipleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_multiple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(monitoringNeedsParser.T__3)
            self.state = 77
            self.element()
            self.state = 78
            self.element()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 79
                self.element()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(monitoringNeedsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rn(self):
            return self.getTypedRuleContext(monitoringNeedsParser.RnContext,0)


        def st(self):
            return self.getTypedRuleContext(monitoringNeedsParser.StContext,0)


        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = monitoringNeedsParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_element)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.rn()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.st()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PV(self):
            return self.getToken(monitoringNeedsParser.PV, 0)

        def OPERATOR(self):
            return self.getToken(monitoringNeedsParser.OPERATOR, 0)

        def DOUBLE(self):
            return self.getToken(monitoringNeedsParser.DOUBLE, 0)

        def INT(self):
            return self.getToken(monitoringNeedsParser.INT, 0)

        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_rn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRn" ):
                listener.enterRn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRn" ):
                listener.exitRn(self)




    def rn(self):

        localctx = monitoringNeedsParser.RnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rn)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(monitoringNeedsParser.T__4)
            self.state = 92
            self.match(monitoringNeedsParser.PV)
            self.state = 93
            self.match(monitoringNeedsParser.OPERATOR)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==27 or _la==29):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self.match(monitoringNeedsParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PV(self):
            return self.getToken(monitoringNeedsParser.PV, 0)

        def OPERATOR(self):
            return self.getToken(monitoringNeedsParser.OPERATOR, 0)

        def BOOL(self):
            return self.getToken(monitoringNeedsParser.BOOL, 0)

        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_st

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSt" ):
                listener.enterSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSt" ):
                listener.exitSt(self)




    def st(self):

        localctx = monitoringNeedsParser.StContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_st)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(monitoringNeedsParser.T__4)
            self.state = 98
            self.match(monitoringNeedsParser.PV)
            self.state = 99
            self.match(monitoringNeedsParser.OPERATOR)
            self.state = 100
            self.match(monitoringNeedsParser.BOOL)
            self.state = 101
            self.match(monitoringNeedsParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FrequencyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PV(self):
            return self.getToken(monitoringNeedsParser.PV, 0)

        def OPERATOR(self):
            return self.getToken(monitoringNeedsParser.OPERATOR, 0)

        def DOUBLE(self):
            return self.getToken(monitoringNeedsParser.DOUBLE, 0)

        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_frequency

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrequency" ):
                listener.enterFrequency(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrequency" ):
                listener.exitFrequency(self)




    def frequency(self):

        localctx = monitoringNeedsParser.FrequencyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_frequency)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(monitoringNeedsParser.T__6)
            self.state = 104
            self.match(monitoringNeedsParser.PV)
            self.state = 105
            self.match(monitoringNeedsParser.OPERATOR)
            self.state = 106
            self.match(monitoringNeedsParser.DOUBLE)
            self.state = 107
            self.match(monitoringNeedsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntervalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PV(self):
            return self.getToken(monitoringNeedsParser.PV, 0)

        def OPERATOR(self):
            return self.getToken(monitoringNeedsParser.OPERATOR, 0)

        def DOUBLE(self):
            return self.getToken(monitoringNeedsParser.DOUBLE, 0)

        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_interval

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterval" ):
                listener.enterInterval(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterval" ):
                listener.exitInterval(self)




    def interval(self):

        localctx = monitoringNeedsParser.IntervalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_interval)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(monitoringNeedsParser.T__7)
            self.state = 110
            self.match(monitoringNeedsParser.PV)
            self.state = 111
            self.match(monitoringNeedsParser.OPERATOR)
            self.state = 112
            self.match(monitoringNeedsParser.DOUBLE)
            self.state = 113
            self.match(monitoringNeedsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RateOfChangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PV(self):
            return self.getToken(monitoringNeedsParser.PV, 0)

        def OPERATOR(self):
            return self.getToken(monitoringNeedsParser.OPERATOR, 0)

        def DOUBLE(self):
            return self.getToken(monitoringNeedsParser.DOUBLE, 0)

        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_rateOfChange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRateOfChange" ):
                listener.enterRateOfChange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRateOfChange" ):
                listener.exitRateOfChange(self)




    def rateOfChange(self):

        localctx = monitoringNeedsParser.RateOfChangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_rateOfChange)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(monitoringNeedsParser.T__8)
            self.state = 116
            self.match(monitoringNeedsParser.PV)
            self.state = 117
            self.match(monitoringNeedsParser.OPERATOR)
            self.state = 118
            self.match(monitoringNeedsParser.DOUBLE)
            self.state = 119
            self.match(monitoringNeedsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PollRateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PV(self):
            return self.getToken(monitoringNeedsParser.PV, 0)

        def OPERATOR(self):
            return self.getToken(monitoringNeedsParser.OPERATOR, 0)

        def DOUBLE(self):
            return self.getToken(monitoringNeedsParser.DOUBLE, 0)

        def getRuleIndex(self):
            return monitoringNeedsParser.RULE_pollRate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPollRate" ):
                listener.enterPollRate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPollRate" ):
                listener.exitPollRate(self)




    def pollRate(self):

        localctx = monitoringNeedsParser.PollRateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pollRate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(monitoringNeedsParser.T__9)
            self.state = 122
            self.match(monitoringNeedsParser.PV)
            self.state = 123
            self.match(monitoringNeedsParser.OPERATOR)
            self.state = 124
            self.match(monitoringNeedsParser.DOUBLE)
            self.state = 125
            self.match(monitoringNeedsParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





